--- a/README
+++ b/README
@@ -1,6 +1,34 @@
-THIS IS JUST A COPY FROM Download MAKER 3.01.02-beta
+THIS IS JUST A COPY FROM MAKER 3.01.02-beta
 http://yandell.topaz.genetics.utah.edu/cgi-bin/maker_license.cgi with NO CHANGE
 TO THE SOURCE CODE.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 ***MAKER DOCUMENTATION***
 ALSO SEE THE GMOD MAKER TUTORIAL http://gmod.org/wiki/MAKER_Tutorial
